Bug 1422033 - Support opening a new window when no windows are avaliable for a new tab, r=bz

MozReview-Commit-ID: DzSllBVdUhq